feat(examen): implementar patrón Screenplay con Playwright y validar flujos de carrito e inventario